# SolanaBurner

./: .gitignore  .replit  .vercelignore  CNFT_BURNING_GUIDE.md  CNFT_SIMULATION_NOTICE.md  CODE_OVERVIEW.md  Cargo.toml  DEPLOYMENT_FIX.md  DEPLOYMENT_READY.md  FEATURE_IDEAS.md  PRODUCTION_CHECKLIST.md  RENDER_DEPLOYMENT.md  TREE_CREATION_GUIDE.md  Trunk.toml  accurate-rent-calculator.js  app.py  asset-cache.js  cli-transfer-cnft.js  cnft-burn-server.js  cnft-transfer-server.js  cnft-transfer-tool.js  cnft_data.json  config.js  create-merkle-tree.js  debugTransactionInstruction.js  delegated-cnft-transfer.js  demo-create-tree.js  demo-mint-cnft.js  demo-setup.js  direct-cnft-transfer.html  direct-cnft-transfer.js  direct-transfer-handler.js  direct-web3-transfer.js  enhanced-nft-burn.js  fastifyServer.js  helius-api.js  helius-send-api.js  helius-send.js  index.html  metadata.json  (+40 more)
attached_assets/: Pasted--For-license-information-please-see-main-28b827fe-js-LICENSE-txt-var-webpack-m-1745674811618.txt  Pasted--div-class-hidden-sm-flex-sticky-top-32-style-contain-paint-div-class-flex-col-items-start-j-1745633938675.txt  Pasted--function-YS-e-const-url-n-classes-s-alt-o-circle-a-loadingImage-i-HS-h-1745676754519.txt  Pasted-TokensTab-tsx-135-TokensTab-Error-details-DOCTYPE-html-if-lt-IE-7-html-class-no-js-i-1743124687765.txt  Pasted-const-express-require-express-const-Connection-Keypair-PublicKey-sendAndConfirmTransacti-1745766677544.txt  Pasted-here-s-a-complete-and-working-script-that-lets-a-user-send-all-their-compressed-NFTs-cNFTs-to-the--1746323412743.txt  Pasted-import-Connection-Keypair-PublicKey-Transaction-sendAndConfirmTransaction-f-1746339941300.txt  (+1 more)
src/: app.rs  (+3 more)
(+77 files in other folders)
