[package]
name = "solana-token-burner"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = { version = "0.21", features = ["csr"] }
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "HtmlInputElement",
    "Event",
    "InputEvent",
    "FocusEvent",
    "console"
]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"
log = "0.4"
js-sys = "0.3"
console_error_panic_hook = "0.1"