[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "asgiref==3.8.1",
    "asyncio>=3.4.3",
    "flask-login>=0.6.3",
    "flask-wtf>=1.2.2",
    "httpx>=0.23.3",
    "oauthlib>=3.2.2",
    "python-dotenv>=1.0.1",
    "solana==0.25.1",
    "trafilatura>=2.0.0",
    "twilio>=9.4.5",
    "web3>=7.8.0",
]
